🐛 Fix emojis vertical alignment

--- a/assets/twemoji-basis.css
+++ b/assets/twemoji-basis.css
@@ -4,7 +4,8 @@
     display: inline-block;
     height: 1em;
     width: 1em;
-    margin: 0 .05em 0 .1em;
+    margin: 0 .1em;
+    vertical-align: -.1em;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 1em 1em;
